deploy/kube-deploy-prod.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: my-nodejs-application
spec:
 replicas: 1
 template:
   metadata:
     labels:
       app: my-nodejs-application
   spec:
     containers:
     - name: my-nodejs-application
       image: gcr.io/airy-adapter-258403/DOCKER_IMAGE_NAME
       ports:
         - containerPort: 8080
