deploy/kube-assign-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: my-nodejs-application-np
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3002
  selector:
    app: my-nodejs-application-DOCKER_IMAGE_TAG
