deploy/kube-assign-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-nodejs-application-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: my-static-ip
spec:
  backend:
    serviceName: my-nodejs-application-np
    servicePort: 80
